tests/auto/webchannel/tst_webchannel.h
@@ -136,6 +136,8 @@ signals:
     void returnedObjectChanged();
     void propChanged(const QString&);
     void replay();
+    void overloadSignal(int);
+    void overloadSignal(float);
 
 public slots:
     void slot1() {}
@@ -155,6 +157,10 @@ public slots:
 
     void setProp(const QString&prop) {emit propChanged(mProp=prop);}
     void fire() {emit replay();}
+
+    int overload(int i) { return i + 1; }
+    QString overload(const QString &str) { return str.toUpper(); }
+    QString overload(const QString &str, int i) { return str.toUpper() + QString::number(i + 1); }
 
 protected slots:
     void slot3() {}
@@ -293,6 +299,10 @@ public slots:
     QJsonArray readJsonArray() const;
     void setJsonArray(const QJsonArray &v);
 
+    int readOverload(int i);
+    QString readOverload(const QString &arg);
+    QString readOverload(const QString &arg, int i);
+
 signals:
     void lastIntChanged();
     void lastBoolChanged();
@@ -308,6 +318,7 @@ private slots:
     void testDeregisterObjectAtStart();
     void testInfoForObject();
     void testInvokeMethodConversion();
+    void testFunctionOverloading();
     void testSetPropertyConversion();
     void testDisconnect();
     void testWrapRegisteredObject();
